--- a/Project/MP-ZombieGame/Packages/manifest.json
+++ b/Project/MP-ZombieGame/Packages/manifest.json
@@ -1,9 +1,12 @@
 {
   "dependencies": {
+    "com.unity.cinemachine": "2.6.11",
     "com.unity.collab-proxy": "1.9.0",
     "com.unity.ide.rider": "2.0.7",
     "com.unity.ide.visualstudio": "2.0.14",
     "com.unity.ide.vscode": "1.2.5",
+    "com.unity.inputsystem": "1.0.2",
+    "com.unity.probuilder": "4.5.2",
     "com.unity.render-pipelines.universal": "10.6.0",
     "com.unity.test-framework": "1.1.31",
     "com.unity.textmeshpro": "3.0.6",
