--- a/Project/MP-ZombieGame/Assets/FPS/Input/FPSInput.asmdef
+++ b/Project/MP-ZombieGame/Assets/FPS/Input/FPSInput.asmdef
@@ -1,12 +1,8 @@
 {
-    "name": "ZombieShooter",
+    "name": "FPSInput",
     "rootNamespace": "",
     "references": [
-        "GUID:30817c1a0e6d646d99c048fc403f5979",
-        "GUID:fecf25954bb196642ab50657689761d6",
-        "GUID:4296dddd72bff074981bcd882c64c085",
-        "GUID:72872094b21c16e48b631b2224833d49",
-        "GUID:d0b933b35d6d04a47b95676281f4c52c"
+        "GUID:75469ad4d38634e559750d17036d5f7c"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
