--- a/Project/MP-ZombieGame/Assets/Scripts/ZombieShooter/ZombieShooter.asmdef
+++ b/Project/MP-ZombieGame/Assets/Scripts/ZombieShooter/ZombieShooter.asmdef
@@ -7,7 +7,8 @@
         "GUID:4296dddd72bff074981bcd882c64c085",
         "GUID:72872094b21c16e48b631b2224833d49",
         "GUID:d0b933b35d6d04a47b95676281f4c52c",
-        "GUID:88f824d9b22ba474d80ac45a58257ee6"
+        "GUID:88f824d9b22ba474d80ac45a58257ee6",
+        "GUID:d1b8faa3173d3ea4884591e6bacf33f5"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
